// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders correctly 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation3 Header-headersmall Header-headermedium Header-headerlarge css-15q74cf-MuiPaper-root"
  >
    <nav
      aria-label="Utilities"
      class="Header-utilitiesBar"
      role="navigation"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <ul>
            <li
              class="Header-navItem"
              data-testid="utilities-link-Our-story"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","action":"/gb/landing-page/","label":"Our story"}"
                data-testid="button"
                href="/gb/landing-page/"
                tabindex="0"
                target="_blank"
              >
                Our story
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </li>
            <li
              class="Header-navItem"
              data-testid="login"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","label":"MC: login.label.btn"}"
                data-testid="button"
                tabindex="0"
                target="_blank"
                type="button"
              >
                MC: login.label.btn
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Header-navItem"
            >
              <button
                aria-label="MC: menu.language"
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton Header-languageSelectionButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-country-selector","label":"open panel","action":"open panel"}"
                data-testid="language-button"
                tabindex="0"
                type="button"
              >
                <img
                  alt="United Kingdom"
                  class="Header-languageIcon"
                  height="16px"
                  src="/icons/flags/uk.svg"
                  width="20px"
                />
                GB
                <span
                  class="Header-downArrow"
                >
                  ▾
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="Header-drawer Header-languageDrawer"
      data-testid="language-section"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-gtm="{"id":"nav-country-selector","label":"close panel","action":"close panel"}"
        data-testid="language-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="Header-languageContainer css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl MuiContainer-disableGutters css-1xfmbiw-MuiContainer-root"
        >
          <div>
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-pn037-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xl-9 MuiGrid2-grid-lg-9 Grid-item css-1n3tg82-MuiGrid2-root"
                data-testid="grid-item"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1j4kt3i-MuiTypography-root"
                  data-testid="typography"
                >
                  Europe
                </h6>
                <div
                  class="css-1qjezyi"
                >
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Albania","action":"/al/"}"
                    data-testid="language-menu-item"
                    href="/al"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Albania flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/al.svg"
                        width="20px"
                      />
                    </span>
                    Albania
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Österreich","action":"/at/"}"
                    data-testid="language-menu-item"
                    href="/at"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Österreich flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/at.svg"
                        width="20px"
                      />
                    </span>
                    Österreich
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"United Kingdom","action":"/gb/"}"
                    data-testid="language-menu-item"
                    href="/gb"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="United Kingdom flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/uk.svg"
                        width="20px"
                      />
                    </span>
                    United Kingdom
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Header-navigationBar"
      data-testid="header-navigation-bar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="Header-navigationBarContent"
          >
            <a
              aria-label="MC: global.logoLabel"
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Header-logoLink Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
              data-testid="anchor-link"
              href="/gb/"
            >
              <svg
                class="Header-logo css-87lb9q"
                viewBox="0 0 250 250"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h250v250H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                  />
                </g>
              </svg>
            </a>
            <nav
              aria-label="Navigation"
              class="Header-navigation"
              role="navigation"
            >
              <div
                class="MuiTabs-root css-1ujnqem-MuiTabs-root"
              >
                <div
                  class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"Get in touch"}"
                      data-testid="header-navigation-tab-0"
                      href="tel:+4401234567890"
                      role="tab"
                      tabindex="0"
                    >
                      Get in touch
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"About BMI"}"
                      data-testid="header-navigation-tab-1"
                      href="/gb/landing-page/"
                      role="tab"
                      tabindex="-1"
                    >
                      About BMI
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"inTouchLink","action":"https://www.external.co.uk"}"
                      data-testid="header-navigation-tab-2"
                      href="https://www.external.co.uk"
                      role="tab"
                      tabindex="-1"
                    >
                      inTouchLink
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <span
                    class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
            </nav>
            <div
              class="Header-navigationBarButtons"
              data-testid="navigationBar-buttons"
            >
              <button
                aria-label="MC: search.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-searchButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                data-testid="search-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: menu.open"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-text MuiIconButton-sizeLarge css-1mqce1m-MuiButtonBase-root-MuiIconButton-root"
                data-testid="open-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="MenuIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Header-backdrop css-sox5kk-MuiBackdrop-root"
      data-testid="backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="Header-drawer Header-navDrawer"
      data-testid="nav-drawer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-testid="nav-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Header-searchDrawerContainer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="Header-drawer Header-searchDrawer"
      >
        <button
          aria-label="MC: global.close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-close-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <h4
          class="MuiTypography-root MuiTypography-h4  css-1x9euu8-MuiTypography-root"
          data-testid="typography"
        >
          MC: search.title
        </h4>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header component renders correctly when flag doesn't exist 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation3 Header-headersmall Header-headermedium Header-headerlarge css-15q74cf-MuiPaper-root"
  >
    <nav
      aria-label="Utilities"
      class="Header-utilitiesBar"
      role="navigation"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <ul>
            <li
              class="Header-navItem"
              data-testid="utilities-link-Our-story"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","action":"/grp/landing-page/","label":"Our story"}"
                data-testid="button"
                href="/grp/landing-page/"
                tabindex="0"
                target="_blank"
              >
                Our story
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </li>
            <li
              class="Header-navItem"
              data-testid="login"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","label":"MC: login.label.btn"}"
                data-testid="button"
                tabindex="0"
                target="_blank"
                type="button"
              >
                MC: login.label.btn
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Header-navItem"
            >
              <button
                aria-label="MC: menu.language"
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton Header-languageSelectionButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-country-selector","label":"open panel","action":"open panel"}"
                data-testid="language-button"
                tabindex="0"
                type="button"
              >
                <img
                  alt=""
                  class="Header-languageIcon"
                  height="16px"
                  src="/icons/flags/globe.svg"
                  width="20px"
                />
                EN
                <span
                  class="Header-downArrow"
                >
                  ▾
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="Header-drawer Header-languageDrawer"
      data-testid="language-section"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-gtm="{"id":"nav-country-selector","label":"close panel","action":"close panel"}"
        data-testid="language-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="Header-languageContainer css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl MuiContainer-disableGutters css-1xfmbiw-MuiContainer-root"
        >
          <div>
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-pn037-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xl-9 MuiGrid2-grid-lg-9 Grid-item css-1n3tg82-MuiGrid2-root"
                data-testid="grid-item"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1j4kt3i-MuiTypography-root"
                  data-testid="typography"
                >
                  Europe
                </h6>
                <div
                  class="css-1qjezyi"
                >
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Albania","action":"/al/"}"
                    data-testid="language-menu-item"
                    href="/al"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Albania flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/al.svg"
                        width="20px"
                      />
                    </span>
                    Albania
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Österreich","action":"/at/"}"
                    data-testid="language-menu-item"
                    href="/at"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Österreich flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/at.svg"
                        width="20px"
                      />
                    </span>
                    Österreich
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"United Kingdom","action":"/gb/"}"
                    data-testid="language-menu-item"
                    href="/gb"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="United Kingdom flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/uk.svg"
                        width="20px"
                      />
                    </span>
                    United Kingdom
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Header-navigationBar"
      data-testid="header-navigation-bar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="Header-navigationBarContent"
          >
            <a
              aria-label="MC: global.logoLabel"
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Header-logoLink Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
              data-testid="anchor-link"
              href="/grp/"
            >
              <svg
                class="Header-logo css-87lb9q"
                viewBox="0 0 250 250"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h250v250H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                  />
                </g>
              </svg>
            </a>
            <nav
              aria-label="Navigation"
              class="Header-navigation"
              role="navigation"
            >
              <div
                class="MuiTabs-root css-1ujnqem-MuiTabs-root"
              >
                <div
                  class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"Get in touch"}"
                      data-testid="header-navigation-tab-0"
                      href="tel:+4401234567890"
                      role="tab"
                      tabindex="0"
                    >
                      Get in touch
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"About BMI"}"
                      data-testid="header-navigation-tab-1"
                      href="/grp/landing-page/"
                      role="tab"
                      tabindex="-1"
                    >
                      About BMI
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"inTouchLink","action":"https://www.external.co.uk"}"
                      data-testid="header-navigation-tab-2"
                      href="https://www.external.co.uk"
                      role="tab"
                      tabindex="-1"
                    >
                      inTouchLink
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <span
                    class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
            </nav>
            <div
              class="Header-navigationBarButtons"
              data-testid="navigationBar-buttons"
            >
              <button
                aria-label="MC: search.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-searchButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                data-testid="search-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: menu.open"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-text MuiIconButton-sizeLarge css-1mqce1m-MuiButtonBase-root-MuiIconButton-root"
                data-testid="open-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="MenuIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Header-backdrop css-sox5kk-MuiBackdrop-root"
      data-testid="backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="Header-drawer Header-navDrawer"
      data-testid="nav-drawer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-testid="nav-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Header-searchDrawerContainer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="Header-drawer Header-searchDrawer"
      >
        <button
          aria-label="MC: global.close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-close-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <h4
          class="MuiTypography-root MuiTypography-h4  css-1x9euu8-MuiTypography-root"
          data-testid="typography"
        >
          MC: search.title
        </h4>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header component shows sample basket icon 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation3 Header-headersmall Header-headermedium Header-headerlarge css-15q74cf-MuiPaper-root"
  >
    <nav
      aria-label="Utilities"
      class="Header-utilitiesBar"
      role="navigation"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <ul>
            <li
              class="Header-navItem"
              data-testid="utilities-link-Our-story"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","action":"/gb/landing-page/","label":"Our story"}"
                data-testid="button"
                href="/gb/landing-page/"
                tabindex="0"
                target="_blank"
              >
                Our story
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </li>
            <li
              class="Header-navItem"
              data-testid="login"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","label":"MC: login.label.btn"}"
                data-testid="button"
                tabindex="0"
                target="_blank"
                type="button"
              >
                MC: login.label.btn
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Header-navItem"
            >
              <button
                aria-label="MC: menu.language"
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton Header-languageSelectionButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-country-selector","label":"open panel","action":"open panel"}"
                data-testid="language-button"
                tabindex="0"
                type="button"
              >
                <img
                  alt="United Kingdom"
                  class="Header-languageIcon"
                  height="16px"
                  src="/icons/flags/uk.svg"
                  width="20px"
                />
                GB
                <span
                  class="Header-downArrow"
                >
                  ▾
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="Header-drawer Header-languageDrawer"
      data-testid="language-section"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-gtm="{"id":"nav-country-selector","label":"close panel","action":"close panel"}"
        data-testid="language-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="Header-languageContainer css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl MuiContainer-disableGutters css-1xfmbiw-MuiContainer-root"
        >
          <div>
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-pn037-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xl-9 MuiGrid2-grid-lg-9 Grid-item css-1n3tg82-MuiGrid2-root"
                data-testid="grid-item"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1j4kt3i-MuiTypography-root"
                  data-testid="typography"
                >
                  Europe
                </h6>
                <div
                  class="css-1qjezyi"
                >
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Albania","action":"/al/"}"
                    data-testid="language-menu-item"
                    href="/al"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Albania flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/al.svg"
                        width="20px"
                      />
                    </span>
                    Albania
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Österreich","action":"/at/"}"
                    data-testid="language-menu-item"
                    href="/at"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Österreich flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/at.svg"
                        width="20px"
                      />
                    </span>
                    Österreich
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"United Kingdom","action":"/gb/"}"
                    data-testid="language-menu-item"
                    href="/gb"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="United Kingdom flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/uk.svg"
                        width="20px"
                      />
                    </span>
                    United Kingdom
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Header-navigationBar"
      data-testid="header-navigation-bar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="Header-navigationBarContent"
          >
            <a
              aria-label="MC: global.logoLabel"
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Header-logoLink Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
              data-testid="anchor-link"
              href="/gb/"
            >
              <svg
                class="Header-logo css-87lb9q"
                viewBox="0 0 250 250"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h250v250H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                  />
                </g>
              </svg>
            </a>
            <nav
              aria-label="Navigation"
              class="Header-navigation"
              role="navigation"
            >
              <div
                class="MuiTabs-root css-1ujnqem-MuiTabs-root"
              >
                <div
                  class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"Get in touch"}"
                      data-testid="header-navigation-tab-0"
                      href="tel:+4401234567890"
                      role="tab"
                      tabindex="0"
                    >
                      Get in touch
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"About BMI"}"
                      data-testid="header-navigation-tab-1"
                      href="/gb/landing-page/"
                      role="tab"
                      tabindex="-1"
                    >
                      About BMI
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"inTouchLink","action":"https://www.external.co.uk"}"
                      data-testid="header-navigation-tab-2"
                      href="https://www.external.co.uk"
                      role="tab"
                      tabindex="-1"
                    >
                      inTouchLink
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <span
                    class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
            </nav>
            <div
              class="Header-navigationBarButtons"
              data-testid="navigationBar-buttons"
            >
              <button
                aria-label="MC: search.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-searchButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                data-testid="search-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: basket.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-basketButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                data-testid="shopping-cart-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiBadge-root css-nde7kb-MuiBadge-root"
                  data-testid="shopping-cart-button-badge"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium IconClasses-white css-1hwmxis-MuiSvgIcon-root"
                    data-testid="ShoppingCartOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorError css-rpxmth-MuiBadge-badge"
                    data-testid="shopping-cart-button-badge-slot"
                  >
                    1
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: menu.open"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-text MuiIconButton-sizeLarge css-1mqce1m-MuiButtonBase-root-MuiIconButton-root"
                data-testid="open-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="MenuIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Header-backdrop css-sox5kk-MuiBackdrop-root"
      data-testid="backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="Header-drawer Header-navDrawer"
      data-testid="nav-drawer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-testid="nav-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Header-searchDrawerContainer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="Header-drawer Header-searchDrawer"
      >
        <button
          aria-label="MC: global.close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-close-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <h4
          class="MuiTypography-root MuiTypography-h4  css-1x9euu8-MuiTypography-root"
          data-testid="typography"
        >
          MC: search.title
        </h4>
      </div>
    </div>
    <div
      class="Header-cartDrawerContainer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="css-1syuv4f"
        data-testid="shopping-cart-dialog"
      >
        <div
          class="css-1g1g7av"
          data-testid="shopping-cart-dialog-header-container"
        >
          <button
            aria-label="MC: dialog.close"
            class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge css-1ap5ryc-MuiButtonBase-root-MuiIconButton-root"
            data-testid="shopping-cart-dialog-close-button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <h3
            class="MuiTypography-root MuiTypography-h3 Typography-underline css-2221f6-MuiTypography-root"
            data-testid="shopping-cart-dialog-title"
          >
            Basket title
          </h3>
          <div
            class="css-mxlylg"
            data-testid="shopping-cart-dialog-info"
          >
            <p>
              MC: pdp.overview.sampleDialogMessage
            </p>
            <p>
              MC: pdp.overview.sampleDeliveryDialogMessage
            </p>
          </div>
        </div>
        <div
          class="css-1043o2i"
          data-testid="shopping-cart-dialog-product-list"
        >
          <div
            class="css-1x0xcnn"
            data-testid="shopping-cart-dialog-product"
          >
            <div
              class="css-jvcwke"
            >
              <img
                class="css-1eq6imq"
                src="S"
              />
            </div>
            <div
              class="css-1rr4qq7"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-flrefr-MuiTypography-root"
                data-testid="shopping-cart-dialog-product-title-test-product"
              >
                test product
              </h6>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-dkd5mi-MuiTypography-root"
                data-testid="shopping-cart-dialog-product-colour-"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-czj8wd-MuiTypography-root"
                data-testid="shopping-cart-dialog-product-size-"
              />
            </div>
            <div
              class="css-1s5g2fe"
            >
              <button
                aria-label="MC: pdp.overview.removeSample"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-text MuiIconButton-sizeLarge css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                data-testid="shopping-cart-dialog-remove-product-test-product"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="DeleteIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-eulom"
          data-testid="shopping-cart-dialog-actions"
        >
          <a
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            data-testid="shopping-cart-dialog-complete-order-button"
            href="/gb/sample-basket/"
            tabindex="0"
          >
            MC: pdp.overview.completeSampleOrder
            <span
              class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowForwardIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
            data-testid="shopping-cart-dialog-continue-browsing-button"
            tabindex="0"
            type="button"
          >
            MC: pdp.overview.continueBrowsing
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header component toggles search 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation3 Header-headersmall Header-headermedium Header-headerlarge css-15q74cf-MuiPaper-root"
  >
    <nav
      aria-label="Utilities"
      class="Header-utilitiesBar"
      role="navigation"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <ul>
            <li
              class="Header-navItem"
              data-testid="utilities-link-Our-story"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","action":"/gb/landing-page/","label":"Our story"}"
                data-testid="button"
                href="/gb/landing-page/"
                tabindex="0"
                target="_blank"
              >
                Our story
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </li>
            <li
              class="Header-navItem"
              data-testid="login"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-top-utilities-bar","label":"MC: login.label.btn"}"
                data-testid="button"
                tabindex="0"
                target="_blank"
                type="button"
              >
                MC: login.label.btn
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Header-navItem"
            >
              <button
                aria-label="MC: menu.language"
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Header-utilitiesButton Header-languageSelectionButton css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"nav-country-selector","label":"open panel","action":"open panel"}"
                data-testid="language-button"
                tabindex="0"
                type="button"
              >
                <img
                  alt="United Kingdom"
                  class="Header-languageIcon"
                  height="16px"
                  src="/icons/flags/uk.svg"
                  width="20px"
                />
                GB
                <span
                  class="Header-downArrow"
                >
                  ▾
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="Header-drawer Header-languageDrawer"
      data-testid="language-section"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-gtm="{"id":"nav-country-selector","label":"close panel","action":"close panel"}"
        data-testid="language-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div
        class="Header-languageContainer css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl MuiContainer-disableGutters css-1xfmbiw-MuiContainer-root"
        >
          <div>
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-pn037-MuiGrid2-root"
              data-testid="grid-container"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xl-9 MuiGrid2-grid-lg-9 Grid-item css-1n3tg82-MuiGrid2-root"
                data-testid="grid-item"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1j4kt3i-MuiTypography-root"
                  data-testid="typography"
                >
                  Europe
                </h6>
                <div
                  class="css-1qjezyi"
                >
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Albania","action":"/al/"}"
                    data-testid="language-menu-item"
                    href="/al"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Albania flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/al.svg"
                        width="20px"
                      />
                    </span>
                    Albania
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"Österreich","action":"/at/"}"
                    data-testid="language-menu-item"
                    href="/at"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="Österreich flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/at.svg"
                        width="20px"
                      />
                    </span>
                    Österreich
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-pressed="false"
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium Navigation-navigationListButton css-vp91lc-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"nav-country-selector","label":"United Kingdom","action":"/gb/"}"
                    data-testid="language-menu-item"
                    href="/gb"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <img
                        alt="United Kingdom flag"
                        class="LanguageSelection-languageIcon"
                        height="16px"
                        loading="lazy"
                        src="/icons/flags/uk.svg"
                        width="20px"
                      />
                    </span>
                    United Kingdom
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Header-navigationBar"
      data-testid="header-navigation-bar"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <div
            class="Header-navigationBarContent"
          >
            <a
              aria-label="MC: global.logoLabel"
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Header-logoLink Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
              data-testid="anchor-link"
              href="/gb/"
            >
              <svg
                class="Header-logo css-87lb9q"
                viewBox="0 0 250 250"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h250v250H0z"
                  fill="#009fe3"
                />
                <g
                  fill="#fff"
                >
                  <path
                    d="M155.393 86.416 144.565 131h-.212l-10.829-44.584H100.3v50.634c-.76-9.718-6.732-14.589-13.079-16.771 5.626-3.078 9.342-7.218 9.342-14.862 0-7.749-4.247-19-24.2-19H30.848v75.8h42.994c12.786 0 25.368-7.183 26.455-21.075v21.075h22.081V113.6h.212l13.164 48.62h17.41l13.163-48.62h.213v48.62h22.081v-75.8ZM54.2 104.461h12.317c4.777 0 7.962 1.381 7.962 5.2 0 4.884-3.079 6.264-7.962 6.264H54.2Zm13.694 39.7H54.2v-14.115h14.652c5.521 0 8.174 2.442 8.174 6.9 0 5.839-4.246 7.219-9.126 7.219ZM195.798 86.416h23.355v75.797h-23.355z"
                  />
                </g>
              </svg>
            </a>
            <nav
              aria-label="Navigation"
              class="Header-navigation"
              role="navigation"
            >
              <div
                class="MuiTabs-root css-1ujnqem-MuiTabs-root"
              >
                <div
                  class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-oqr85h"
                  style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                />
                <div
                  class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                    role="tablist"
                  >
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"Get in touch"}"
                      data-testid="header-navigation-tab-0"
                      href="tel:+4401234567890"
                      role="tab"
                      tabindex="0"
                    >
                      Get in touch
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"About BMI"}"
                      data-testid="header-navigation-tab-1"
                      href="/gb/landing-page/"
                      role="tab"
                      tabindex="-1"
                    >
                      About BMI
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <a
                      aria-selected="false"
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Header-navItem Header-navItemNoChildren css-23ognm-MuiButtonBase-root-MuiButton-root-MuiButtonBase-root-MuiTab-root"
                      data-gtm="{"id":"nav-main-menu","label":"inTouchLink","action":"https://www.external.co.uk"}"
                      data-testid="header-navigation-tab-2"
                      href="https://www.external.co.uk"
                      role="tab"
                      tabindex="-1"
                    >
                      inTouchLink
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <span
                    class="MuiTabs-indicator css-tv859c-MuiTabs-indicator"
                    style="left: 0px; width: 0px;"
                  />
                </div>
              </div>
            </nav>
            <div
              class="Header-navigationBarButtons"
              data-testid="navigationBar-buttons"
            >
              <button
                aria-label="MC: search.label"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-searchButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                data-testid="search-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="MC: menu.open"
                class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-text MuiIconButton-sizeLarge css-1mqce1m-MuiButtonBase-root-MuiIconButton-root"
                data-testid="open-button"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="MenuIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Header-backdrop css-sox5kk-MuiBackdrop-root"
      data-testid="backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="Header-drawer Header-navDrawer"
      data-testid="nav-drawer"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <button
        aria-label="MC: global.close"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
        data-testid="nav-close-button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="CloseIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Header-searchDrawerContainer"
      style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    >
      <div
        class="Header-drawer Header-searchDrawer"
      >
        <button
          aria-label="MC: global.close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge Header-closeButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
          data-testid="search-close-button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <h4
          class="MuiTypography-root MuiTypography-h4  css-1x9euu8-MuiTypography-root"
          data-testid="typography"
        >
          MC: search.title
        </h4>
        <form
          action="/gb/search/"
          class="css-1hsggty"
          data-testid="search-form"
        >
          <div
            class="InputGroup-lockedxs css-14zqdme"
          >
            <div
              class="MuiFormControl-root MuiTextField-root InputGroup-input css-k5tp9j-MuiFormControl-root-MuiTextField-root"
              data-testid="search-input-text"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-filled MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-filled css-1mkbcp8-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="search-input-text"
                id="search-input-text-label"
              >
                MC: search.placeholder.header
              </label>
              <div
                class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-18sqayi-MuiInputBase-root-MuiFilledInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
                  data-testid="search-input-text-input"
                  id="search-input-text"
                  name="q"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <button
              aria-label="MC: search.label"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge InputGroup-button css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
              data-gtm="{"id":"search1","label":"MC: search.label"}"
              data-testid="search-submit-button"
              tabindex="0"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="SearchIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
      </div>
    </div>
  </header>
</div>
`;
